Closed Bug 371743 Opened 19 years ago Closed 19 years ago

[FIX]Script with src attribute causes xbl binding not to get applied in this case

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha4

People

(Reporter: martijn.martijn, Assigned: bzbarsky)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files, 2 obsolete files)

Attached file testcase
I was trying to make a mochikit test for bug 371724 and got severely frustrated, because I couldn't get it working. See testcase, you should see some text with the testcase, no blank page. This regressed between 2006-11-02 and 2006-11-04, I think a regression from bug 343730. I don't see this bug with a 2007-02-07 branch build.
Attached patch Proposed fix (obsolete) — Splinter Review
Assignee: general → bzbarsky
Status: NEW → ASSIGNED
Attached patch Same as diff -w (obsolete) — Splinter Review
Without this, if there's no script global (as for XBL) we block the parser but don't ever load the script... so never get anywhere on the XBL. And probably leak to boot.
Attachment #256501 - Flags: superreview?(jonas)
Attachment #256501 - Flags: review?(jonas)
Priority: -- → P2
Summary: Script with src attribute causes xbl binding not to get applied in this case → [FIX]Script with src attribute causes xbl binding not to get applied in this case
Target Milestone: --- → mozilla1.9alpha3
let's make sure automate this test case
Flags: in-testsuite?
Attachment #256501 - Attachment is patch: true
Attachment #256501 - Attachment mime type: text/x-patch → text/plain
Well, the mochikit testcase would automatically fail if this bug would reoccur, so it does seem to me there is no separate mochitest necessary.
Attachment #256501 - Flags: superreview?(jonas)
Attachment #256501 - Flags: superreview+
Attachment #256501 - Flags: review?(jonas)
Attachment #256501 - Flags: review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
OS: Windows XP → All
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: mozilla1.9alpha3 → mozilla1.9alpha4
Attachment #256499 - Attachment is obsolete: true
Attachment #256501 - Attachment is obsolete: true
I'm marking this in-testsuite-, because I checked in the Mochikit test for bug 371724, it automatically also checks this bug. If you want a separate test for this, let me know, I'll be happy to make one.
Flags: in-testsuite? → in-testsuite-
If this is tested by an existing test, it should be marked "in-testsuite+". That being said, having a test that tests this bug directly instead of indirectly is probably a good idea, if it's not too much work.
Flags: in-testsuite- → in-testsuite+
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: