Don't block the parser on scripts we'll never execute.  Bug 371743, r+sr=sicking